--- a/frontend/src/sass/_experience.scss
+++ b/frontend/src/sass/_experience.scss
@@ -28,6 +28,8 @@
         }
     }
     .education-container {
+        padding-bottom: 100px;
+        
         .course-container {
             margin: 30px auto;
             line-height: 2rem;
