--- a/frontend/src/sass/_skill.scss
+++ b/frontend/src/sass/_skill.scss
@@ -17,6 +17,7 @@
     }
 
     margin-bottom: 50px;
+    padding-bottom: 100px;
 }
 
 .skill {
